Tweak static demo files

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <p>Hello, world!</p>
-        <p>Django + esbuild</p>
+        <p>Django + esbuild …click me!</p>
     </body>
 </html>
